--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = rplidar_ros
 	url = https://github.com/robopeak/rplidar_ros.git
 	branch = master
+[submodule "scout_ros"]
+	path = scout_ros
+	url = https://github.com/westonrobot/scout_ros.git
