--- a/my_scripts/sensor_fusion_parameter/robot_localization_map_odom.yaml
+++ b/my_scripts/sensor_fusion_parameter/robot_localization_map_odom.yaml
@@ -5,6 +5,7 @@ map_frame: map              # Defaults to "map" if unspecified
 odom_frame: odom            # Defaults to "odom" if unspecified
 base_link_frame: base_link  # Defaults to "base_link" if unspecified
 world_frame: map           # Defaults to the value of odom_frame if unspecified
+publish_tf: true
 
 sensor_timeout: 0.1
 transform_time_offset: 0.1
