--- a/my_scripts/sensor_fusion_parameter/robot_localization_map_odom.yaml
+++ b/my_scripts/sensor_fusion_parameter/robot_localization_map_odom.yaml
@@ -20,28 +20,26 @@ odom0: /odom
 odom0_config: [false, false, false,
                false, false, false,
                true, true, false,
-               false, false, true,
+               false, false, false,
                false, false, false]
+
 odom0_differential: true
 odom0_relative: false
+odom0_queue_size: 10
+odom0_pose_rejection_threshold: 2
+odom0_twist_rejection_threshold: 0.2
+odom0_nodelay: false
 
 pose0: /position_marvelmind_with_covariance   # Hedgehog!
-pose0_config: [true,  true,  false,
-               false, false, false,
-               false, false, false,
+pose0_config: [false,  false,  false,
+               false, false, true,
+               true, true, false,
                false, false, false,
                false, false, false]
+
+pose0_queue_size: 5
 pose0_differential: true
 pose0_rejection_threshold: 2  
-
-pose1: amcl_pose # AMCL!
-pose1_config: [true,  true, false,
-               false, false, true,
-               false, false, false,
-               false, false, false,
-               false, false, false]
-pose0_differential: true
-pose1_rejection_threshold: 2
 
 
 process_noise_covariance: [0.05, 0,    0,    0,    0,    0,    0,     0,     0,    0,    0,    0,    0,    0,    0,
